Feature/dbl 6 get appointment by (#6)
* implement get appointment schema specs

* implement get appointment by id
