# openapi/schema.yaml
@@ -88,6 +88,28 @@ paths:
               schema: 
                 $ref: "#/components/schemas/Patient"
 
+  /appointment/{appointmentId}:
+    get:
+      summary: get existing appointment
+      operationId: getAppointmentById
+      parameters:
+        - in: path
+          name: appointmentId
+          schema: 
+            type: string
+            format: uuid
+          required: true
+          description: Id of the appointment
+      tags:
+        - Appointment
+      responses: 
+        "200":
+          description: appointment is retreived
+          content:
+            application/json: 
+              schema: 
+                $ref: "#/components/schemas/Appointment"
+
 components:
   schemas:
     Patient:
@@ -117,9 +139,8 @@ components:
           type: boolean
         gender:
           type: string
-        birthdate:
-          type: string
-          format: date
+        age:
+          type: int
         address:
           type: string
         occupation:
